Fix jumpiness of marquee

--- a/src/styles/abstracts/_fonts.scss
+++ b/src/styles/abstracts/_fonts.scss
@@ -66,7 +66,7 @@ p {
 }
 
 .skills li {
-  font-size: clamp(1rem, 1.3vw, 2.5rem);
+  font-size: clamp(1rem, 1.6vw, 2.5rem);
 }
 
 
